Add link to main page

--- a/recipes/chickentikka.html
+++ b/recipes/chickentikka.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>tikka masala</title>
 </head>
 <body>
-    <h1> Odin Recipes</h1>
-    <a href="/home/jashwant/odin-recipes/recipes/chickentikka.html"> Chicken tikka masala</a>
+    <h1>  chicken tikka masala recipe</h1>
 </body>
 </html>
