Add three webpages for recipes and links are added respectively

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1> Odin Recipes</h1>
-    <a href="/home/jashwant/odin-recipes/recipes/chickentikka.html"> Chicken tikka masala</a>
+    <h1> Indian Recipes</h1>
+    <img src="/home/jashwant/odin-recipes/recipes/womencooking.jpg">
+    <br>
+    <br>
+    <a href="/home/jashwant/odin-recipes/recipes/chickentikka.html"> <b>Chicken Tikka Masala</b></a> <br>
+    <a href="/home/jashwant/odin-recipes/recipes/eggfriedrice.html"> <b>Egg Fried Rice</b></a><br>
+    <a href="/home/jashwant/odin-recipes/recipes/biryani.html"> <b>Chicken Biryani</b></a>
 </body>
 </html>
