--- a/recipes/chickentikka.html
+++ b/recipes/chickentikka.html
@@ -7,6 +7,30 @@
     <title>tikka masala</title>
 </head>
 <body>
-    <h1>  chicken tikka masala recipe</h1>
+    <h1>chicken tikka masala recipe</h1>
+    <img src="/home/jashwant/odin-recipes/recipes/ctmimg.jpeg">
+    <h3> Description</h3>
+    <p>You’ve been itching for a change recently. You know, something to spice things up and throw a spanner into the monotony of routine. Enter: chicken tikka masala. Sure, it might take two days to throw together, but when you pair it with some fluffy steamed rice or buttery, garlic naan, it’s well worth the wait. Don’t believe us? Try it yourself! </p>
+    <h4> Ingredients</h4>
+    <ul>
+        <li>Chicken boneless</li>
+        <li>Red chilli powder</li>
+        <li>Garam masala</li>
+        <li>Cumin powder</li>
+        <li>Coriander powder</li>
+        <li>Turmeric</li>
+        <li>Salt</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Slice the chicken into bite-sized chunks. Combine the cubed chicken with the yogurt, lemon juice, garlic, ginger, salt, cumin, garam masala, and paprika and stir until well-coated.</li> 
+        <li>Cover and refrigerate for at least 1 hour, or overnight.</li>
+        <li>Preheat the oven to 500°F (260°C). Line a high-sided baking pan or roasting tray with parchment paper.</li>
+        <li>Place the marinated chicken pieces on bamboo or wooden skewers, then set them over the prepared baking pan, making sure there is space underneath the chicken to help distribute the heat more evenly. Bake for about 15 minutes, until slightly dark brown on the edges.</li> 
+        <li>Make the sauce: Heat the oil in a large pot over medium heat, then sauté the onions, ginger, and garlic until tender but not browned. Add the cumin, turmeric, coriander, paprika, chili powder, and garam masala and stir constantly for about 30 seconds, until the spices are fragrant. Stir in the tomato puree, tomato sauce, and 1 ¼ cups of water, then bring to a boil and cook for about 5 minutes. Pour in the cream.</li>
+        <li>Remove the chicken from the skewers and add to the sauce, cooking for another 1-2 minutes. Garnish with cilantro and serve over rice or alongside naan bread.</li> 
+        <li>Enjoy!</li>
+    </ol>
+
 </body>
 </html>
