--- a/recipes/chickentikka.html
+++ b/recipes/chickentikka.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>chicken tikka masala recipe</h1>
-    <img src="/home/jashwant/odin-recipes/recipes/ctmimg.jpeg">
+    <img src="./ctmimg.jpeg">
     <h3> Description</h3>
     <p>You’ve been itching for a change recently. You know, something to spice things up and throw a spanner into the monotony of routine. Enter: chicken tikka masala. Sure, it might take two days to throw together, but when you pair it with some fluffy steamed rice or buttery, garlic naan, it’s well worth the wait. Don’t believe us? Try it yourself! </p>
     <h4> Ingredients</h4>
