--- a/recipes/eggfriedrice.html
+++ b/recipes/eggfriedrice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Egg Fried Rice Recipe</h1>
-    <img src="/home/jashwant/odin-recipes/recipes/eggrice.jpg">
+    <img src="./eggrice.jpg">
     <h3>Description</h3>
     <p>A popular Indo Chinese recipe prepared with leftover rice, scrambled eggs, assorted veggies and spicy schezwan sauce. This 15 minutes recipe is perfect for weekday meals. Try it!</p>
     <h4> Ingredients</h4>
