--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1> Indian Recipes</h1>
-    <img src="/home/jashwant/odin-recipes/recipes/womencooking.jpg">
+    <img src="./recipes/womencooking.jpg">
     <br>
     <br>
-    <a href="/home/jashwant/odin-recipes/recipes/chickentikka.html"> <b>Chicken Tikka Masala</b></a> <br>
-    <a href="/home/jashwant/odin-recipes/recipes/eggfriedrice.html"> <b>Egg Fried Rice</b></a><br>
-    <a href="/home/jashwant/odin-recipes/recipes/biryani.html"> <b>Chicken Biryani</b></a>
+    <a href="./recipes/chickentikka.html"> <b>Chicken Tikka Masala</b></a> <br>
+    <a href="./recipes/eggfriedrice.html"> <b>Egg Fried Rice</b></a><br>
+    <a href="./recipes/biryani.html"> <b>Chicken Biryani</b></a>
 </body>
 </html>
