--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chicken Biryani Recipe</h1>
-    <img src="/home/jashwant/odin-recipes/recipes/Cb.jpg">
+    <img src="./Cb.jpg">
     <h3> Description</h3>
     <p>Chicken Biryani is a luxurious delight known worldwide and loved by all. Beautiful melange of chicken layered with long grain basmati rice and then slow cooked (dum) to perfection.</p>
     <h4> Ingredients</h4>
